# aws-spot-deployer

./: .actrc  .claude_permissions  .coverage  .env.example  .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AMAUO_SETUP_INSTRUCTIONS.md  AWS_SSO_DOCKER.md  BACALHAU_GUIDE.md  BINARY_DISTRIBUTION.md  CHANGELOG.md  CHECK_BUILD.md  CI_DEBUG.md  CI_TROUBLESHOOTING.md  CLAUDE.md  CLOUD_INIT_DEBUG_COMMANDS.md  CNAME  DEBUGGING_CHECKLIST.md  DEBUG_CHECKLIST.md  DEBUG_SSH_COMMAND.md  DEPLOYMENT_DEBUG_CHECKLIST.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_FIX_PLAN.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_FIX_TESTING.md  DEPLOYMENT_FLOW_FIXED.md  DEPLOYMENT_ISSUES_FOUND.md  DEPLOYMENT_WORKFLOW.md  DEVELOP.md  DIRECTORY_SEPARATION_SUMMARY.md  DOCKER_INSTALLATION_UPDATE.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.simple  FINAL_FIX_SUMMARY.md  FIX_DEPLOYMENT_ACTION_PLAN.md  (+146 more)
.claude/: claude_project.json  settings.local.json
.claude/commands/: README.md  commands-list.md  craft-prompt.md  refine-prompt.md
.cspell/: custom-dictionary.txt
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  ci-complete.yml  ci.yml  deploy-pages-manual.yml  deploy-pages-simple.yml  deploy-pages.yml  docker-publish.yml  pages.yml  publish.yml  pypi-deploy.yml  pypi.yml  release.yml  update-gh-pages.yml  validate-deployments.yml  version-tag.yml
.specstory/history/: .history.json  2025-07-09_15-38-19Z-aws-spot-instance-deployer-rich-cli-enhancements-and-parallel-processing.md  2025-07-10_15-13-50Z-af9e63a3-f577-4cb0-867e-13b9247deb7d.md  2025-07-12_18-26-12Z-destroy-function-state-mismatch-analysis.md  2025-07-13_16-04-30Z-claude-md-creation-for-codebase-onboarding.md  2025-07-13_16-06-38Z-claude-md-creation-for-codebase-onboarding.md  2025-07-13_16-08-24Z-claude-md-creation-for-codebase-onboarding.md  2025-07-13_21-18-02Z-invalid-api-key-·-please-run-login.md  2025-07-13_22-09-31Z-f1d5d743-80c1-46eb-92f8-d911b86b2863.md  2025-07-13_23-21-22Z-a55c9eb8-7808-4534-9f0f-fe63640489fb.md  2025-07-13_23-50-00Z-f4b68712-ce68-4d99-9b18-a286cdd8f2c1.md  2025-07-14_18-48-54Z-systemd-services-spot-instances-logging-&-deployment.md  2025-07-14_19-43-03Z-b4fdd5a3-b743-4da4-9e80-295fffae6ecb.md  2025-07-14_22-12-verify-container-mounts.md
.spot/: deployment.yaml  docker-compose.yml
.spot/configs/: bacalhau-config.yaml
.spot/files/: README.md
.spot/scripts/: setup-bacalhau.sh  setup.sh
.spot/services/: example.service.disabled
UNKNOWN.egg-info/: SOURCES.txt
aws_spot_deployer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bacalhau-deployment/: README.md  bacalhau-config.yaml.example  bacalhau.service  setup-bacalhau.sh
compose/: sensor-compose.yml
core/: __init__.py  status_manager.py
credentials/: orchestrator_endpoint
db/: __init__.py  machine_state.py
debug_report_20250714_173506/: debug_report.txt  summary.txt
deployment/: README.md  manifest.yaml  setup.sh
deployment-files/: README.md  bacalhau-config.yaml.example  credentials.json  orchestrator_token.example
deployment-files/scripts/: additional_commands.sh
deployment/scripts/: run.sh  setup-aws-credentials.sh  setup.sh
docs/: .htaccess  CNAME  INSTALL.md  README.md  VERSION  index.html  install-skypilot.sh  install.sh  placeholder.html  spot
examples/: global-zones.md  multi-region-approaches.md
examples/nodejs-app/: README.md
features/: INTENT_DRIVEN_DEVELOPMENT.md  configuration_management.feature  deploy_bacalhau_cluster.feature  health_monitoring.feature  lifecycle_management.feature  node_identity_generation.feature
features/step_definitions/: deployment_steps.py
files/: app.config  credentials.json  deployment_data.csv
instance-files/: .gitignore  setup.sh
instance-files/bacalhau/: README.md  bacalhau-config-template.yaml  orchestrator_endpoint.example
instance/cloud-init/: init-vm-template.yml
instance/config/: bacalhau-config-template.yaml  bacalhau-config.yaml  sensor-config.yaml
instance/scripts/: bacalhau-startup.service  bacalhau.service  cloud_metadata.py  collect-debug-logs.sh  deploy_services.py  docker-compose-bacalhau.yaml  docker-compose-sensor.yaml  generate_bacalhau_config.sh  generate_demo_identity.py  generate_node_identity.py  run_custom_command.py  sensor-generator.service  sensor.service  set_bacalhau_env.sh  setup-config.service  setup_bacalhau.py  setup_orchestrator.py  simple-startup.py  startup.py  verify_docker.py
scripts/: build-dev.sh  build-docker.sh  check-code.sh  check-default-vpcs.py  cleanup.sh  cluster_manager.py  create-test-tag.sh  generate_bacalhau_config.py  generate_node_identity.py  health_check.sh  install-updated.sh  install-uvx.sh  install.sh  next-version.py  next-version.sh  setup-act.sh  setup-branch-protection.sh  setup-pre-commit.sh  smoke-test.py  test-ci-locally.sh
skypilot-deployment/: .gitignore  README.md  bacalhau-cluster.yaml  install_skypilot.py  multi-region-deploy  setup-example.sh  sky-deploy
spot/: CLAUDE.md  DATABRICKS_S3_SETUP.md  IMPLEMENTATION_UPDATE.md  PORTABLE_REARCHITECTURE.md  QUICKSTART.md  VPC_CONFIGURATION_GUIDE.md  additional_commands.sh  changes.md  cspell.json  delete_vpcs.py  deploy_spot.py
spot_deployer/: README.md  __init__.py  __main__.py  bacalhau_api.py  main.py  test_bacalhau.py  version.py
src/amauo/: cli.py  (+5 more)
tests/: __init__.py  test_aws_manager.py  test_cli.py  test_cloud_init_templates.py  test_config_validator.py  test_convention_scanner.py  test_create_integration.py  test_deployment_discovery.py  test_deployment_validation.py  test_file_uploader.py  test_generate_command.py  test_integration.py  test_manager.py  test_portable_cloud_init.py  test_service_installer.py  test_shutdown_handler.py  test_template_integration.py  test_ui_manager.py
ui/: __init__.py  display.py
util/: get_available_regions.py  update_config_with_regions.py  verify_config_architecture.py
(+136 files in other folders)
