[project]
name = "spot-deployer"
version = "1.0.0"
description = "AWS Spot Instance Deployment Tool with Bacalhau support"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
spot-deployer = "spot_deployer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spot_deployer"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "W293",  # Blank line with whitespace (common in YAML strings)
    "W291",  # Trailing whitespace (common in YAML strings)
]

[tool.ruff.lint.per-file-ignores]
# cloud_init.py contains YAML content with specific whitespace requirements
"spot_deployer/utils/cloud_init.py" = ["W293", "W291"]
# AWS multiline docstrings
"spot_deployer/utils/aws.py" = ["W293"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
