[project]
name = "spot-deployer"
dynamic = ["version"]
description = "AWS Spot Instance Deployment Tool with Bacalhau support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
spot-deployer = "spot_deployer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spot_deployer"]

[tool.hatch.version]
source = "code"
path = "spot_deployer/version.py"
expression = "__version__"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "types-requests",
    "boto3-stubs[ec2]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "W293",  # Blank line with whitespace (common in YAML strings)
    "W291",  # Trailing whitespace (common in YAML strings)
]

[tool.ruff.lint.per-file-ignores]
# cloud_init.py contains YAML content with specific whitespace requirements
"spot_deployer/utils/cloud_init.py" = ["W293", "W291"]
# AWS multiline docstrings
"spot_deployer/utils/aws.py" = ["W293"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecation warnings from botocore about datetime.utcnow()
    # This is an issue in the AWS SDK, not our code
    "ignore::DeprecationWarning:botocore.*",
]
